syntax = "proto3";

package hometasker.v1;

import "proto/tasks.proto";

option go_package = "goproto/v1";

message Config {
  repeated PassiveWeeklyTrigger passive_triggers = 1;
  repeated TaskSystem task_systems = 2;
  repeated PileConfig piles = 3;
  repeated User users = 4;
  NotificationConfig notifications = 5;
  MealConfig meals = 6;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
}

message PileConfig {
  string id = 1;
  repeated PileConfig subpiles = 2;
  string name = 3;
  string description = 4;
  string unit_singular = 5;
  string unit_plural = 6;
  string unit_abbreviation = 7;
  int32 unit_atomic_scale = 8; // the total value of the pile divided by this value gives the number of units; e.g. with this = 4, adding 1 to the pile is adding 1/4 gallon
  int32 initial_value = 9;
  int32 max_value = 10;
  int32 min_value = 11;
}

message PassiveWeeklyTrigger {
  repeated TriggerWeeklyScheduleCondition schedule = 1;

  string pile_id = 2; // Pile to be updated by this trigger
  int32 amount = 3;
}

message NotificationConfig {
  string method = 1; // "gotify", "ntfy", etc.
  string gotify_url = 2;
  string gotify_token = 3;
}

message MealConfig {
  string recipes_path = 1;
}
