syntax = "proto3";

package hometasker.v1;

import "cooking.proto";
import "tasks.proto";

option go_package = "hometasker/v1";

message PipelineWork {
  int32 points = 1;
  uint32 step_idx = 2;  // index in the pipeline of the step that is being worked on
  uint32 arrival_on_step_seqno = 3; // incrementor that is higher for tasks which arrived on this step later
  TaskRecord task = 4;
}

message PipelineActivity {
  string task_system_id = 1; // the id of the task system this pipeline belongs to
  uint32 pipeline_index = 2; // index of the pipline in the task system
  repeated PipelineWork pipeline_work = 3; // the work being done in the pipeline, one for each step that is being worked on
}

message Pile {
  string id = 1;
  string display_name = 2;
  int32 value = 3;
  int32 max_value = 4;
  repeated Pile subpiles = 5; // nested piles
}

message SystemState {
  // each trigger gets one task being worked on at a time
  repeated PipelineActivity pipeline_activity = 1;
  repeated Pile piles = 2;
  repeated MealPlan meal_plans = 3;
}
